--- a/source/res/ntfy_cd.rc
+++ b/source/res/ntfy_cd.rc
@@ -110,7 +110,7 @@ END
 IDD_INFO DIALOGEX 0, 0, 299, 245
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "CD Information"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_ARTIST,39,7,180,14,ES_AUTOHSCROLL,0,HIDC_ARTIST
     EDITTEXT        IDC_TITLE,39,23,180,14,ES_AUTOHSCROLL,0,HIDC_TITLE
@@ -134,7 +134,7 @@ IDD_DB DIALOGEX 0, 0, 380, 142
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "CD Database Editor"
 MENU IDR_DB
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CONTROL         "Tree1",IDC_TREE,"SysTreeView32",TVS_HASBUTTONS | 
                     TVS_HASLINES | TVS_LINESATROOT | TVS_EDITLABELS | 
@@ -150,7 +150,7 @@ END
 IDD_SETABSTRACKPOS DIALOGEX 0, 0, 246, 52
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Set absolute track position"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     COMBOBOX        IDC_TRACK,43,7,140,105,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP,0,HIDC_TRACK
@@ -166,7 +166,7 @@ END
 IDD_SKIP DIALOGEX 0, 0, 238, 73
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Skip"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CONTROL         "Slider1",IDC_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | 
                     WS_TABSTOP,9,23,140,20,0,HIDC_SLIDER
@@ -206,7 +206,7 @@ END
 
 IDD_INFO_TAB_PLAYLIST DIALOGEX 0, 0, 280, 136
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_TRACKS,1,13,106,123,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | WS_VSCROLL | 
@@ -230,7 +230,7 @@ END
 
 IDD_INFO_TAB_DISCINFO DIALOGEX 0, 0, 280, 137
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_DISCINFO,1,13,278,123,ES_MULTILINE | ES_WANTRETURN | 
                     WS_VSCROLL | WS_HSCROLL,0,HIDC_DISCINFO
@@ -239,7 +239,7 @@ END
 
 IDD_INFO_TAB_TRACKINFO DIALOGEX 0, 0, 280, 136
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_TRACKS2,1,13,106,123,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -253,7 +253,7 @@ END
 IDD_CHOOSEDISC DIALOGEX 0, 0, 296, 210
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Choose entry"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_LIST,16,65,208,130,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -269,7 +269,7 @@ END
 IDD_MOTD DIALOGEX 0, 0, 343, 202
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Information from the CDDB server"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CONTROL         "Never show this info in the future! (Otherwise it will only be showed when the information is changed!)",
                     IDC_NOMOTD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,185,
@@ -835,26 +835,26 @@ LANGUAGE LANG_SWEDISH, SUBLANG_DEFAULT
 // Dialog
 //
 
-IDD_ABOUT DIALOG DISCARDABLE  0, 0, 249, 125
+IDD_ABOUT DIALOG DISCARDABLE  0, 0, 249, 124
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About %s"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,94,104,50,14
+    DEFPUSHBUTTON   "OK",IDOK,94,103,50,14
     LTEXT           "Notify CD Player",IDC_STATIC,37,7,56,8
     LTEXT           "Version %s",IDC_VERSION,93,7,103,8
-    CONTROL         "Copyright (c) 1996-1998, Mats Ljungqvist",IDC_STATIC,
-                    "Static",SS_LEFTNOWORDWRAP | WS_GROUP,37,19,130,8
-    ICON            IDI_MAIN,IDC_STATIC,7,7,21,20
-    CONTROL         "CDDB database originally by Ti Kan (ti@amb.org)\nCDDB server by Steve Scherf (steve@moonsoft.com)",
-                    IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,37,81,
-                    174,18
-    LTEXT           "(%s)",IDC_EMAIL,172,19,70,8,SS_NOTIFY
-    LTEXT           "%s",IDC_HOMEPAGE,96,63,138,8,SS_NOTIFY
-    LTEXT           "Visit homepage at",IDC_STATIC,37,63,57,8
-    PUSHBUTTON      "&Check for new version",IDC_CHECKVERSION,161,104,81,14
-    PUSHBUTTON      "C&redits...",IDC_CREDITS,7,104,55,14
-    LTEXT           "This program is free software; and is distributed under the GNU General Public License . See credits for more information.",
+    CONTROL         "Author's email:",IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | 
+                    WS_GROUP,37,19,46,8
+    ICON            IDI_MAIN,IDC_STATIC,7,7,20,20
+    CONTROL         "Copyright (c) 1996-1998, Mats Ljungqvist\nCDDB database originally by Ti Kan (ti@amb.org)\nCDDB server by Steve Scherf (steve@moonsoft.com)",
+                    IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,37,75,
+                    174,25
+    LTEXT           "(%s)",IDC_EMAIL,83,19,153,8,SS_NOTIFY
+    LTEXT           "%s",IDC_HOMEPAGE,96,61,138,8,SS_NOTIFY
+    LTEXT           "Visit homepage at:",IDC_STATIC,37,61,59,8
+    PUSHBUTTON      "&Check for new version",IDC_CHECKVERSION,161,103,81,14
+    PUSHBUTTON      "C&redits...",IDC_CREDITS,7,103,55,14
+    LTEXT           "This program is free software; and is distributed under the GNU General Public License. See credits for more information.",
                     IDC_STATIC,37,36,197,20
 END
 
@@ -872,7 +872,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 242
         TOPMARGIN, 7
-        BOTTOMMARGIN, 118
+        BOTTOMMARGIN, 117
     END
 END
 #endif    // APSTUDIO_INVOKED
