--- a/source/res/ntfy_cd.rc
+++ b/source/res/ntfy_cd.rc
@@ -107,10 +107,11 @@ END
 // Dialog
 //
 
-IDD_INFO DIALOGEX 0, 0, 299, 245
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_INFO DIALOGEX 0, 0, 299, 246
+STYLE DS_SYSMODAL | DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "CD Information"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     EDITTEXT        IDC_ARTIST,39,7,180,14,ES_AUTOHSCROLL,0,HIDC_ARTIST
     EDITTEXT        IDC_TITLE,39,23,180,14,ES_AUTOHSCROLL,0,HIDC_TITLE
@@ -123,7 +124,7 @@ BEGIN
                     HIDC_INTERNET
     PUSHBUTTON      "&Set Track",IDC_SETTRACK,242,58,50,14,0,0,HIDC_SETTRACK
     CONTROL         "Tab1",IDC_TAB,"SysTabControl32",TCS_TOOLTIPS | 
-                    WS_TABSTOP,7,80,285,158,0,HIDC_TAB
+                    WS_TABSTOP,7,81,285,158,0,HIDC_TAB
     LTEXT           "Artist",IDC_STATIC,7,9,31,8
     LTEXT           "Title",IDC_STATIC,7,25,31,8
     LTEXT           "Category",IDC_STATIC,7,41,29,8
@@ -132,9 +133,10 @@ END
 
 IDD_DB DIALOGEX 0, 0, 380, 142
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "CD Database Editor"
 MENU IDR_DB
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Tree1",IDC_TREE,"SysTreeView32",TVS_HASBUTTONS | 
                     TVS_HASLINES | TVS_LINESATROOT | TVS_EDITLABELS | 
@@ -149,8 +151,9 @@ END
 
 IDD_SETABSTRACKPOS DIALOGEX 0, 0, 246, 52
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Set absolute track position"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     COMBOBOX        IDC_TRACK,43,7,140,105,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP,0,HIDC_TRACK
@@ -165,8 +168,9 @@ END
 
 IDD_SKIP DIALOGEX 0, 0, 238, 73
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Skip"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Slider1",IDC_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | 
                     WS_TABSTOP,9,23,140,20,0,HIDC_SLIDER
@@ -181,8 +185,9 @@ BEGIN
     LTEXT           "Track",IDC_STATIC,7,45,20,8
 END
 
-IDD_PROGRESS DIALOG DISCARDABLE  0, 0, 134, 41
+IDD_PROGRESS DIALOGEX 0, 0, 134, 41
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "%s"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -192,8 +197,9 @@ BEGIN
                     20,120,14
 END
 
-IDD_CATEGORYCHOOSEEXTENDED DIALOG DISCARDABLE  0, 0, 195, 137
+IDD_CATEGORYCHOOSEEXTENDED DIALOGEX 0, 0, 195, 137
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Choose category"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -206,7 +212,7 @@ END
 
 IDD_INFO_TAB_PLAYLIST DIALOGEX 0, 0, 280, 136
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     LISTBOX         IDC_TRACKS,1,13,106,123,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | WS_VSCROLL | 
@@ -239,7 +245,7 @@ END
 
 IDD_INFO_TAB_TRACKINFO DIALOGEX 0, 0, 280, 136
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     LISTBOX         IDC_TRACKS2,1,13,106,123,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -252,8 +258,9 @@ END
 
 IDD_CHOOSEDISC DIALOGEX 0, 0, 296, 210
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Choose entry"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     LISTBOX         IDC_LIST,16,65,208,130,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -268,8 +275,9 @@ END
 
 IDD_MOTD DIALOGEX 0, 0, 343, 202
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Information from the CDDB server"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Never show this info in the future! (Otherwise it will only be showed when the information is changed!)",
                     IDC_NOMOTD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,185,
@@ -279,8 +287,9 @@ BEGIN
                     ES_READONLY | WS_VSCROLL,0,HIDC_EDIT
 END
 
-IDD_ASKFORPASSWORD DIALOG DISCARDABLE  0, 0, 236, 47
+IDD_ASKFORPASSWORD DIALOGEX 0, 0, 236, 47
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Enter proxy password"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -537,19 +546,20 @@ BEGIN
     LTEXT           "Icon operation",IDC_STATIC,8,6,46,8
 END
 
-IDD_CREDITS DIALOG DISCARDABLE  0, 0, 297, 231
+IDD_CREDITS DIALOG DISCARDABLE  0, 0, 297, 230
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Credits"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "&Close",IDOK,240,210,50,14
+    DEFPUSHBUTTON   "&Close",IDOK,240,209,50,14
     EDITTEXT        IDC_CREDITS,7,7,283,197,ES_MULTILINE | ES_AUTOVSCROLL | 
                     ES_AUTOHSCROLL | ES_READONLY | ES_WANTRETURN | 
                     WS_VSCROLL | WS_HSCROLL
 END
 
-IDD_SEARCH DIALOG DISCARDABLE  0, 0, 300, 46
+IDD_SEARCH DIALOGEX 0, 0, 300, 46
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Search"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -559,8 +569,9 @@ BEGIN
     LTEXT           "Enter string to search for",IDC_STATIC,7,7,78,8
 END
 
-IDD_CATEGORYCHOOSESINGLE DIALOG DISCARDABLE  0, 0, 195, 137
+IDD_CATEGORYCHOOSESINGLE DIALOGEX 0, 0, 195, 137
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Choose category"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -685,7 +696,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 292
         TOPMARGIN, 7
-        BOTTOMMARGIN, 238
+        BOTTOMMARGIN, 239
     END
 
     IDD_DB, DIALOG
@@ -796,7 +807,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 290
         TOPMARGIN, 7
-        BOTTOMMARGIN, 224
+        BOTTOMMARGIN, 223
     END
 
     IDD_SEARCH, DIALOG
