--- a/source/res/ntfy_cd.rc
+++ b/source/res/ntfy_cd.rc
@@ -111,7 +111,7 @@ IDD_INFO DIALOGEX 0, 0, 299, 246
 STYLE DS_SYSMODAL | DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "CD Information"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_ARTIST,39,7,180,14,ES_AUTOHSCROLL,0,HIDC_ARTIST
     EDITTEXT        IDC_TITLE,39,23,180,14,ES_AUTOHSCROLL,0,HIDC_TITLE
@@ -136,7 +136,7 @@ STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "CD Database Editor"
 MENU IDR_DB
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CONTROL         "Tree1",IDC_TREE,"SysTreeView32",TVS_HASBUTTONS | 
                     TVS_HASLINES | TVS_LINESATROOT | TVS_EDITLABELS | 
@@ -153,7 +153,7 @@ IDD_SETABSTRACKPOS DIALOGEX 0, 0, 246, 52
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Set absolute track position"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     COMBOBOX        IDC_TRACK,43,7,140,105,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP,0,HIDC_TRACK
@@ -170,7 +170,7 @@ IDD_SKIP DIALOGEX 0, 0, 238, 73
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Skip"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CONTROL         "Slider1",IDC_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | 
                     WS_TABSTOP,9,23,140,20,0,HIDC_SLIDER
@@ -189,7 +189,7 @@ IDD_PROGRESS DIALOGEX 0, 0, 134, 41
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "%s"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CTEXT           "Reading records",IDC_TITLE,7,7,120,8
     CTEXT           "0",IDC_COUNT,7,21,120,8
@@ -201,7 +201,7 @@ IDD_CATEGORYCHOOSEEXTENDED DIALOGEX 0, 0, 195, 137
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Choose category"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,138,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,138,24,50,14
@@ -212,7 +212,7 @@ END
 
 IDD_INFO_TAB_PLAYLIST DIALOGEX 0, 0, 280, 136
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_TRACKS,1,13,106,123,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | WS_VSCROLL | 
@@ -245,7 +245,7 @@ END
 
 IDD_INFO_TAB_TRACKINFO DIALOGEX 0, 0, 280, 136
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_TRACKS2,1,13,106,123,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -260,7 +260,7 @@ IDD_CHOOSEDISC DIALOGEX 0, 0, 296, 210
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Choose entry"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     LISTBOX         IDC_LIST,16,65,208,130,LBS_USETABSTOPS | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
@@ -277,7 +277,7 @@ IDD_MOTD DIALOGEX 0, 0, 343, 202
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Information from the CDDB server"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     CONTROL         "Never show this info in the future! (Otherwise it will only be showed when the information is changed!)",
                     IDC_NOMOTD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,185,
@@ -291,7 +291,7 @@ IDD_ASKFORPASSWORD DIALOGEX 0, 0, 236, 47
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Enter proxy password"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_PASSWORD,13,20,152,14,ES_PASSWORD | ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,179,7,50,14
@@ -326,19 +326,26 @@ BEGIN
                     WS_TABSTOP,111,46,91,10
     CONTROL         "Artist/Title in menu",IDC_ARTISTINMENU,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,111,57,91,10
-    COMBOBOX        IDC_DEFAULTDEVICE,8,103,81,84,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_DEFAULTDEVICE,67,98,62,84,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_POLLTIME,162,102,30,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_POLLTIME,67,114,27,12,ES_AUTOHSCROLL
     PUSHBUTTON      "&Register %s as default player (Win 95\\98)",
-                    IDC_REGISTERDEFAULT,5,137,225,14
+                    IDC_REGISTERDEFAULT,5,136,225,14
     EDITTEXT        IDC_EXTERNALCOMMAND,8,166,202,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_BROWSE,215,166,11,14
-    GROUPBOX        "Misc options",IDC_STATIC,2,2,231,87
-    GROUPBOX        "Default CD device",IDC_STATIC,2,93,91,26
-    GROUPBOX        "Poll status every",IDC_STATIC,157,93,72,26
-    LTEXT           "second(s)",IDC_STATIC,194,104,34,8
+    GROUPBOX        "Misc options",IDC_STATIC,2,2,231,82
+    GROUPBOX        "CD device options",IDC_STATIC,1,89,134,40
+    GROUPBOX        "Menu translucency",IDC_STATIC,141,89,92,40
+    LTEXT           "second(s)",IDC_STATIC,98,116,34,8
     GROUPBOX        "External program to run when a new disc is inserted",
                     IDC_STATIC,2,155,231,28
+    LTEXT           "Default CD device",IDC_STATIC,7,102,59,8
+    LTEXT           "Poll status every",IDC_STATIC,7,114,52,8
+    CONTROL         "Enable (Win 2000\\XP)",IDC_TRANS_CHECK,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,145,102,84,10
+    CONTROL         "Slider1",IDC_TRANS_SLIDER,"msctls_trackbar32",TBS_BOTH | 
+                    TBS_NOTICKS | WS_TABSTOP,143,118,68,9
+    LTEXT           "100%",IDC_TRANS_TEXT,211,116,18,8
 END
 
 IDD_OPTIONS_TAB_TOOLTIP DIALOG DISCARDABLE  0, 0, 236, 184
@@ -561,7 +568,7 @@ IDD_SEARCH DIALOGEX 0, 0, 300, 46
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Search"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_SEARCH,7,19,224,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,243,7,50,14
@@ -573,7 +580,7 @@ IDD_CATEGORYCHOOSESINGLE DIALOGEX 0, 0, 195, 137
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Choose category"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,138,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,138,24,50,14
